--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
     </header>
     <h1 class="w3-xxxlarge w3-text-red"><b>Pokémon App</b></h1>
     <hr style="width:50px;border:5px solid" class="w3-round">
-    <h2><a href="https://danduh.github.io/pokemon-top">
+    <h2><a href="https://shellydcms.github.io/pokemon-top">
       Live Demo 
       <i class="fas fa-paw"></i></a></h2>    
-    <h4> <a href="https://github.com/danduh/pokemon-top">Github Repo</a></h4>
+    <h4> <a href="https://github.com/shellydcms/pokemon-top">Github Repo</a></h4>
     <p>
       Demonstrate MFEs with UI testing per each MFE        
     </p>
